--- a/projects/report-builder/package.json
+++ b/projects/report-builder/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "report-builder",
+  "name": "ngx-report-builder",
   "version": "0.0.1",
   "peerDependencies": {
     "@angular/common": "^20.3.0",
