--- a/projects/demo/tsconfig.app.json
+++ b/projects/demo/tsconfig.app.json
@@ -6,7 +6,7 @@
     "outDir": "../../out-tsc/app",
     "types": [],
     "paths": {
-      "@ngx-report-builder": ["../report-builder/src/public-api.ts"]
+      "@ngx-page-builder": ["../page-builder/src/public-api.ts"]
     }
   },
   "include": ["src/**/*.ts"],
