--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@angular/platform-browser": "^20.3.0",
     "@angular/router": "^20.3.0",
     "ngx-drag-drop-kit": "^3.0.0-beta.14",
+    "ngx-input-color": "^4.1.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
