--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@angular/material": "^20.2.9",
     "@angular/platform-browser": "^20.3.0",
     "@angular/router": "^20.3.0",
+    "msgpack-lite": "^0.1.26",
     "ngx-drag-drop-kit": "^3.0.0-beta.14",
     "ngx-input-color": "^4.1.2",
     "rxjs": "~7.8.0",
@@ -40,6 +41,7 @@
     "@angular/cli": "^20.3.4",
     "@angular/compiler-cli": "^20.3.0",
     "@types/jasmine": "~5.1.0",
+    "@types/msgpack-lite": "^0.1.12",
     "jasmine-core": "~5.9.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
