--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@angular/material": "^20.2.9",
     "@angular/platform-browser": "^20.3.0",
     "@angular/router": "^20.3.0",
+    "highcharts": "^12.4.0",
+    "highcharts-angular": "^5.2.0",
     "msgpack-lite": "^0.1.26",
     "ngx-drag-drop-kit": "^3.0.0-beta.14",
     "ngx-input-color": "^4.1.2",
