--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve --port=4321 -o",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "format": "prettier --write \".//projects//**//*.{ts,html,css,scss}\" "
   },
   "prettier": {
     "printWidth": 100,
@@ -51,6 +52,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "ng-packagr": "^20.3.0",
-    "typescript": "~5.9.2"
+    "typescript": "~5.9.2",
+    "prettier": "^3.6.2"
   }
 }
