--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "highcharts": "^12.4.0",
     "highcharts-angular": "^5.2.0",
     "msgpack-lite": "^0.1.26",
-    "ngx-drag-drop-kit": "^4.0.0-beta.1",
+    "ngx-drag-drop-kit": "^4.0.0-beta.2",
     "ngx-input-color": "^4.1.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
@@ -52,7 +52,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "ng-packagr": "^20.3.0",
-    "typescript": "~5.9.2",
-    "prettier": "^3.6.2"
+    "prettier": "^3.6.2",
+    "typescript": "~5.9.2"
   }
 }
