--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "format": "prettier --write \".//projects//**//*.{ts,html,css,scss}\" "
+    "format": "prettier --write \".//projects//**//*.{ts,html,css,scss}\" ",
+    "build:icons": "node ./projects/page-builer/scripts/build-icons.js"
   },
   "prettier": {
     "printWidth": 100,
