--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "highcharts": "^12.4.0",
     "highcharts-angular": "^5.2.0",
     "msgpack-lite": "^0.1.26",
-    "ngx-drag-drop-kit": "^4.0.3-beta.2",
+    "ngx-drag-drop-kit": "^5.1.0",
     "ngx-input-color": "^4.1.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
