add tiny mce to demo

--- a/angular.json
+++ b/angular.json
@@ -55,6 +55,11 @@
                 "glob": "**/*",
                 "input": "./projects/page-builder/src/assets/",
                 "output": "/assets/"
+              },
+              {
+                "glob": "**/*",
+                "input": "node_modules/tinymce",
+                "output": "assets/tinymce/"
               }
             ],
             "styles": ["projects/demo/src/styles.scss"]
@@ -65,7 +70,7 @@
                 {
                   "type": "initial",
                   "maximumWarning": "500kB",
-                  "maximumError": "1MB"
+                  "maximumError": "2MB"
                 },
                 {
                   "type": "anyComponentStyle",
