--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --port=4321 -o",
-    "build": "ng build",
+    "build": "ng build --project=demo",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "format": "prettier --write \".//projects//**//*.{ts,html,css,scss}\" ",
@@ -32,12 +32,14 @@
     "@angular/material": "^21.0.1",
     "@angular/platform-browser": "^21.0.1",
     "@angular/router": "^21.0.1",
+    "@tinymce/tinymce-angular": "^9.1.1",
     "highcharts": "^12.4.0",
     "highcharts-angular": "^5.2.0",
     "msgpack-lite": "^0.1.26",
     "ngx-drag-drop-kit": "5.1.3",
     "ngx-input-color": "^4.1.2",
     "rxjs": "~7.8.0",
+    "tinymce": "^8.2.2",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
