--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "highcharts": "^12.4.0",
     "highcharts-angular": "^5.2.0",
     "msgpack-lite": "^0.1.26",
-    "ngx-drag-drop-kit": "5.1.3",
+    "ngx-drag-drop-kit": "5.1.3-beta.1",
     "ngx-input-color": "^4.1.2",
     "rxjs": "~7.8.0",
     "tinymce": "^8.2.2",
