--- a/package.json
+++ b/package.json
@@ -34,8 +34,11 @@
     "@angular/platform-browser": "^21.0.1",
     "@angular/router": "^21.0.1",
     "@tinymce/tinymce-angular": "^9.1.1",
+    "@zumer/snapdom": "^2.0.2",
     "highcharts": "^12.4.0",
     "highcharts-angular": "^5.2.0",
+    "html-element-to-image": "^2.1.1",
+    "html-to-image": "^1.11.13",
     "msgpack-lite": "^0.1.26",
     "ngx-drag-drop-kit": "^5.2.0",
     "ngx-input-color": "^5.0.0",
@@ -49,6 +52,7 @@
     "@angular/compiler-cli": "^21.0.1",
     "@types/jasmine": "~5.1.0",
     "@types/msgpack-lite": "^0.1.12",
+    "baseline-browser-mapping": "^2.9.18",
     "jasmine-core": "~5.9.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
