fix bug plugins

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "ng": "ng",
     "start": "ng serve --port=4321 -o",
     "build": "ng build --project=demo",
-    "build:lib": "ng build --project=ngx-page-builder",
+    "build:sass": "sass projects/ngx-page-builder/src/assets/style.scss projects/ngx-page-builder/src/assets/styles.css",
+    "build:lib": "npm run build:sass && ng build --project=ngx-page-builder",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "format": "prettier --write \".//projects//**//*.{ts,html,css,scss}\" ",
@@ -40,7 +41,7 @@
     "html-element-to-image": "^2.1.1",
     "html-to-image": "^1.11.13",
     "msgpack-lite": "^0.1.26",
-    "ngx-drag-drop-kit": "^5.2.0",
+    "ngx-page-builder": "^5.2.0",
     "ngx-input-color": "^5.0.0",
     "rxjs": "~7.8.0",
     "tinymce": "^8.2.2",
